# cos-cpp-sdk

./: CMakeLists.txt  README.md  cos_demo.cpp  remove_l5.sh  sample.cpp
include/: Auth.h  Conf.h  Cosapi.h  auth_utility.h  common_codec_utils.h  common_file_utils.h  common_string_utils.h  cos_api.h  cos_api_common.h  cos_api_defines.h  httpsender.h
src/: Auth.cpp  CMakeLists.txt  Conf.cpp  Cosapi.cpp  auth_utility.cpp  common_codec_utils.cpp  common_codec_utils_test.cpp  common_file_utils.cpp  common_string_utils.cpp  common_string_utils_test.cpp  cos_api.cpp  cos_api_common.cpp  httpsender.cpp  l5_endpoint_provider.cpp  true_random.cpp
