cmake_minimum_required(VERSION 2.8)
CMAKE_policy(SET CMP0015 NEW)

include_directories(./include)
link_directories(./lib)
add_subdirectory(./src)
ADD_EXECUTABLE(cos_demo cos_demo.cpp)
if (_USE_L5)
    MESSAGE("use l5")
    add_definitions(-D_USE_L5)
    target_link_libraries(cos_demo cosdk curl ssl rt jsoncpp qos_client stdc++ pthread z)
ELSE()
    target_link_libraries(cos_demo cosdk curl ssl rt jsoncpp stdc++ pthread z)
ENDIF()
